# Configurable-Text-Parser

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.py  file.txt  file_generator.py
includes/: configurable_parser.h
src/: configurable_parser.cpp  source.cpp
test/complex_test/configs/: config.json  example.json
test/complex_test/sensor_data/: sensor_data_1.txt  sensor_data_10.txt  sensor_data_100.txt  sensor_data_1000.txt  sensor_data_101.txt  sensor_data_102.txt  sensor_data_103.txt  sensor_data_104.txt  sensor_data_105.txt  sensor_data_106.txt  sensor_data_107.txt  sensor_data_108.txt  sensor_data_109.txt  sensor_data_11.txt  sensor_data_110.txt  sensor_data_111.txt  sensor_data_112.txt  sensor_data_113.txt  sensor_data_114.txt  sensor_data_115.txt  sensor_data_116.txt  sensor_data_117.txt  sensor_data_118.txt  sensor_data_119.txt  sensor_data_12.txt  sensor_data_120.txt  sensor_data_121.txt  sensor_data_122.txt  sensor_data_123.txt  sensor_data_124.txt  sensor_data_125.txt  sensor_data_126.txt  sensor_data_127.txt  sensor_data_128.txt  sensor_data_129.txt  sensor_data_13.txt  sensor_data_130.txt  sensor_data_131.txt  sensor_data_132.txt  sensor_data_133.txt  (+960 more)
test/configs/: example.json
test/example_test/sensor_data/: file1.txt  file2.txt
test/sensor_data/: file1.txt  file2.txt
